# inkr

./: Makefile  pyproject.toml
.github/workflows/: ci.yml
app/: entities.py  filters.py  models.py
tests/: conftest.py  test_filters.py
tests/fixtures/: database.py  fixtures.py
tests/fixtures/factories/: base.py  composition.py  material.py  material_sku.py  mixture.py  mixture_material.py  mixture_order.py  recipe.py  recipe_version.py
tests/models/: test_composition.py  test_material.py  test_material_sku.py  test_mixture.py  test_mixture_material.py  test_mixture_order.py  test_recipe.py  test_recipe_version.py
