[project]
name = "project"
version = "0.0.3"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.5",
    "psycopg[binary]>=3.2.3",
    "sqlalchemy>=2.0.36",
]

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.8",
    "faker>=33.0.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "ruff>=0.8.0",
]

[tool.ruff]
output-format = "concise"

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
    "PL"  # Pylint
]

[tool.mypy]
strict = true
